--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ on:
       - synchronize
 
 jobs:
-
   test:
     name: Tests on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -22,6 +21,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          submodules: "recursive"
       - uses: actions-rs/toolchain@v1
         with:
           target: "wasm32-unknown-unknown"
@@ -39,20 +39,22 @@ jobs:
         with:
           command: test
           args: --verbose --release
-        
+
   test_coverage:
     name: Code coverage in tests
     runs-on: ubuntu-latest
     container:
-      image:                    xd009642/tarpaulin:latest
-      options:                  --security-opt seccomp=unconfined
+      image: xd009642/tarpaulin:latest
+      options: --security-opt seccomp=unconfined
     steps:
-      - name:                   Checkout repository
-        uses:                   actions/checkout@v2
-      - name:                   Install dependencies
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+      - name: Install dependencies
         run: |
           rustup target add wasm32-unknown-unknown
-      - name:                   Generate code coverage
+      - name: Generate code coverage
         run: |
           cargo tarpaulin --verbose --all-features --workspace --timeout=360 --out Lcov
       - name: Push code coverage results to coveralls.io
@@ -66,6 +68,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
       - uses: actions-rs/toolchain@v1
         with:
           components: clippy
@@ -80,6 +84,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
       - uses: actions-rs/toolchain@v1
         with:
           components: rustfmt
@@ -88,4 +94,3 @@ jobs:
         with:
           command: fmt
           args: --all -- --check --color always
-            
