--- a/crates/codegen-midenvm/Cargo.toml
+++ b/crates/codegen-midenvm/Cargo.toml
@@ -38,4 +38,4 @@ c2zk-rust-wasm-tests-add = { workspace = true }
 wat = { workspace = true }
 wasmprinter = { workspace = true }
 expect-test = { workspace = true }
-wasmtime = "7.0.0"
+wasmtime = { workspace = true }
