--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -31,4 +31,4 @@ c2zk-rust-wasm-tests-add = { workspace = true }
 wat = { workspace = true }
 wasmprinter = { workspace = true }
 expect-test = "1.0.1"
-wasmtime = "7.0.0"
+wasmtime = { workspace = true }
