--- a/crates/codegen-midenvm/Cargo.toml
+++ b/crates/codegen-midenvm/Cargo.toml
@@ -11,7 +11,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-c2zk-ir-transform = { workspace = true }
+ozk-ir-transform = { workspace = true }
 ozk-miden-dialect = { workspace = true }
 ozk-wasm-dialect = { workspace = true }
 pliron = { workspace = true }
@@ -30,9 +30,9 @@ miden-assembly = "0.5"
 miden-stdlib = "0.4"
 miden-processor = "0.5"
 ozk-frontend-wasm = { workspace = true }
-c2zk-rust-wasm-tests-helper = { workspace = true }
-c2zk-rust-wasm-tests-fib = { workspace = true }
-c2zk-rust-wasm-tests-add = { workspace = true }
+ozk-rust-wasm-tests-helper = { workspace = true }
+ozk-rust-wasm-tests-fib = { workspace = true }
+ozk-rust-wasm-tests-add = { workspace = true }
 wat = { workspace = true }
 wasmprinter = { workspace = true }
 expect-test = { workspace = true }
