--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "c2zk-codegen-tritonvm"
+name = "ozk-codegen-tritonvm"
 version = "0.1.0"
-description = "Triton VM backend for c2zk"
+description = "Triton VM backend for ozk"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -11,7 +11,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-c2zk-ir-transform = { workspace = true }
+ozk-ir-transform = { workspace = true }
 ozk-wasm-dialect = { workspace = true }
 pliron = { workspace = true }
 # triton-vm = { path = "../../../triton-vm/triton-vm" }
@@ -22,9 +22,9 @@ twenty-first = { version = "0.19" }
 
 [dev-dependencies]
 ozk-frontend-wasm = { workspace = true }
-c2zk-rust-wasm-tests-helper = { workspace = true }
-c2zk-rust-wasm-tests-fib = { workspace = true }
-c2zk-rust-wasm-tests-add = { workspace = true }
+ozk-rust-wasm-tests-helper = { workspace = true }
+ozk-rust-wasm-tests-fib = { workspace = true }
+ozk-rust-wasm-tests-add = { workspace = true }
 wat = { workspace = true }
 wasmprinter = { workspace = true }
 expect-test = "1.0.1"
