--- a/crates/ir-transform/Cargo.toml
+++ b/crates/ir-transform/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "c2zk-ir-transform"
+name = "ozk-ir-transform"
 version = "0.1.0"
-description = "IR transformations for c2zk"
+description = "IR transformations for ozk"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
