--- a/crates/rust-wasm-tests/add/Cargo.toml
+++ b/crates/rust-wasm-tests/add/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "c2zk-rust-wasm-tests-add"
+name = "ozk-rust-wasm-tests-add"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-c2zk-stdlib = { workspace = true }
+ozk-stdlib = { workspace = true }
