--- a/crates/rust-wasm-tests/fib-bin/Cargo.toml
+++ b/crates/rust-wasm-tests/fib-bin/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "c2zk-rust-wasm-tests-fib-bin"
+name = "ozk-rust-wasm-tests-fib-bin"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-c2zk-stdlib = { path = "../../stdlib", features = [] }
-c2zk-rust-wasm-tests-fib = { path = "../fib" }
+ozk-stdlib = { path = "../../stdlib", features = [] }
+ozk-rust-wasm-tests-fib = { path = "../fib" }
