draft ozk-frontend-clif for Wasm->CLIF-OmniZK pipeline;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/dialects/valida",
   "crates/ir-transform",
   "crates/frontend-wasm",
+  "crates/frontend-clif",
   "crates/stdlib",
   "crates/rust-wasm-tests/fib",
   "crates/rust-wasm-tests/add",
@@ -37,6 +38,7 @@ ozk-miden-dialect = { path = "crates/dialects/miden" }
 ozk-valida-dialect = { path = "crates/dialects/valida" }
 ozk-ir-transform = { path = "crates/ir-transform" }
 ozk-frontend-wasm = { path = "crates/frontend-wasm" }
+ozk-frontend-clif = { path = "crates/frontend-clif" }
 ozk-codegen-tritonvm = { path = "crates/codegen-tritonvm" }
 ozk-codegen-midenvm = { path = "crates/codegen-midenvm" }
 ozk-codegen-valida = { path = "crates/codegen-valida" }
